# go-places

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: settings.py  urls.py
goplaces/: admin.py  apps.py  forms.py  models.py  views.py
goplaces/migrations/: 0001_initial.py  0002_alter_link_id.py  0003_alter_link_keyword_alter_link_url.py
